--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,18 @@
-
 /* Your CSS Code here. */
-html {
-    background-color: rgb(14, 9, 9);
+
+table,th,tr,td{
+	border:1px solid black;
 }
-
-.contains {
-    display: flex;
-    justify-content: space-between;
-
+.Data1{
+	width:250px;
+	height:200px;
 }
-
-.icon1 {
-    color: rgb(188, 201, 213);
-
+.Row1{
+	text-align:center;
 }
-
-a {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    background-color: rgb(45, 36, 4);
+.tab1{
+	width:250px;
 }
-
-.b {
-    color: rgb(233, 214, 214);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 50px;
-    width: 100%;
-}
-
-tr,
-th,
-td {
-    border: 1px solid rgb(118, 118, 44);
-    border-radius: 1px;
-    padding: 10px;
-}
-
-.x {
-    color: aliceblue;
-    background-color: rgb(67, 56, 16);
-    padding: 15px;
+.Data2{
+	height:100px
 }
